@@ -6,6 +6,7 @@ Release 0.7.1: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-2535. Tez UI: Failed task attempts link in vertex details page is broken.
   TEZ-2489. Disable warn log for Timeline ACL error when tez.allow.disabled.timeline-domains set to true.
   TEZ-2528. Tez UI: Column selector buttons gets clipped, and table scroll bar not visible in mac.
   TEZ-2391. TestVertexImpl timing out at times on jenkins builds.
